--- a/test-frontend/index.html
+++ b/test-frontend/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Scrolling Nav - Start Bootstrap Template</title>
+  <title>AB:LE(every)</title>
 
   <!-- Bootstrap core CSS -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/scrolling-nav.css" rel="stylesheet">
-
 </head>
 
 <body id="page-top">
@@ -23,7 +21,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">AB:LE (every)</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,23 +43,39 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>Welcome to Scrolling Nav</h1>
-      <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
+      <h1>Welcome to AB:LE</h1>
+      <p class="lead">A landing page</p>
     </div>
   </header>
 
   <section id="about">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-8 mx-auto" style="text-align: center;">
           <h2>About this page</h2>
-          <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-          <ul>
-            <li>Clickable nav links that smooth scroll to page sections</li>
-            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-          </ul>
+          <p class="lead">form tag action button</p>
+          <div id="main_menu_wrapper">
+              <!-- <img src="./able.jpg" alt="Able(every) Logo" width="60%" /> -->
+              <button type="button" class="btn btn-secondary btn-lg">온라인 양식 제출</button>
+              <button type="button" class="btn btn-secondary btn-lg">전화 연결</button>
+          </div>
+          <div id="main_form_wrapper" style="display: none;">
+              <form action="#" method="POST" target="_self">
+                  <p><label for="input_name">이름</label><input type="text" id="input_name" name="input_name" placeholder="이름을 입력하세요" /></p>
+                  <p><label for="input_place">장소</label><input type="text" id="input_place" name="input_place" placeholder="장소를 선택하세요(예시)" /></p>
+                  <p><label for="input_date">날짜</label><input type="text" id="input_date" name="input_date" placeholder="날짜를 선택하세요" /></p>
+                  <p><label for="input_with">함께하는 동행인 여부</label><input type="text" id="input_with" name="input_with" placeholder="함께하는 동행인 여부" /></p>
+                  <p><label for="input_plan">계획 구매 품목</label><input type="text" id="input_plan" name="input_plan" placeholder="계획 구매 품목" /></p>
+                  <p><label for="input_style">원하는 스타일</label><input type="text" id="input_style" name="input_style" placeholder="계획 구매 품목" /></p>
+                  <p><label for="input_brand">선호하는 브랜드</label><input type="text" id="input_brand" name="input_style" placeholder="선호하는 브랜드" /></p>
+                  <p><label for="input_price">물품 예상 금액</label><input type="text" id="input_price" name="input_price" placeholder="물품 예상 금액" /></p>
+                  <p><label for="input_info">기타 추가 정보</label></p>
+                  <p><textarea id="input_info" name="input_info" placeholder="물품 목적, 본인이 가진 의류, 선호하는 질감 등"></textarea></p>
+                  <p><input type="submit" value="Submit" id="tasks_post_submit"> <input type="reset" value="Reset"></p>
+                  <a class="nav-link js-scroll-trigger" href="#about">GO BACK</a>
+                  <!-- <input type="text" id="input_price" name="input_price" placeholder="물품 목적, 본인이 가진 의류, 선호하는 질감 등" /> -->
+              </form>
+          </div>
         </div>
       </div>
     </div>
@@ -72,7 +86,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Services we offer</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+          <p class="lead">코디네이터와 함께하는 오프라인 쇼핑</p>
         </div>
       </div>
     </div>
@@ -83,7 +97,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Contact us</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+          <p class="lead">하지마~ 연락하지마~</p>
         </div>
       </div>
     </div>
@@ -92,7 +106,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; 정현우?</p>
     </div>
     <!-- /.container -->
   </footer>
@@ -108,5 +122,19 @@
   <script src="js/scrolling-nav.js"></script>
 
 </body>
+<script>
+  function formAction() {
+      console.log(this.getAttribute('id'));
+      if(this.getAttribute('id') === "main_menu_wrapper") {
+          $(this).hide();
+          $('#main_form_wrapper').show();
+      } else {
+          $(this).hide();
+          $('#main_menu_wrapper').show();
+      }
 
+  }
+  document.getElementById('main_menu_wrapper').addEventListener('click', formAction);
+  document.getElementById('main_form_wrapper').addEventListener('click', formAction);
+</script>
 </html>
