--- a/test-frontend/index.html
+++ b/test-frontend/index.html
@@ -14,6 +14,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/scrolling-nav.css" rel="stylesheet">
+  <link href="css/mainStyle.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -28,20 +29,23 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">소개</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#services">서비스</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#applicationForm">신청서</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">연락</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <header class="bg-primary text-white">
+  <header class="text-white">
     <div class="container text-center">
       <h1>Welcome to AB:LE</h1>
       <p class="lead">A landing page</p>
@@ -56,54 +60,8 @@
           <p class="lead">form tag action button</p>
           <div id="main_menu_wrapper">
               <!-- <img src="./able.jpg" alt="Able(every) Logo" width="60%" /> -->
-              <button type="button" class="btn btn-secondary btn-lg">온라인 양식 제출</button>
-              <button type="button" class="btn btn-secondary btn-lg">전화 연결</button>
-          </div>
-          <div id="main_form_wrapper" style="display: none;">
-              <form role="form" action="#" method="POST" target="_self">
-                  <div class="form-group">
-                    <label for="input_name">이름</label>
-                    <input type="text" id="input_name" class="form-control" name="input_name" placeholder="이름을 입력하세요" />
-                  </div>
-                  <div class="form-group">
-                    <label for="input_place">장소</label>
-                    <input type="text" id="input_place" class="form-control" name="input_place" placeholder="장소를 선택하세요(예시)" />
-                  </div>
-                  <div class="form-group">
-                    <label for="input_date">날짜</label>
-                    <input type="text" id="input_date" class="form-control" name="input_date" placeholder="날짜를 선택하세요" />
-                  </div>
-                  <div class="form-group">
-                    <label for="input_with">함께하는 동행인 여부</label>
-                    <input type="text" id="input_with" class="form-control" name="input_with" placeholder="함께하는 동행인 여부" />
-                  </div>
-                  <div class="form-group">
-                    <label for="input_plan">계획 구매 품목</label>
-                    <input type="text" id="input_plan" class="form-control" name="input_plan" placeholder="계획 구매 품목" />
-                  </div>
-                  <div class="form-group">
-                    <label for="input_style">원하는 스타일</label>
-                    <input type="text" id="input_style" class="form-control" name="input_style" placeholder="원하는 스타일" />
-                  </div>
-                  <div class="form-group">
-                    <label for="input_brand">선호하는 브랜드</label>
-                    <input type="text" id="input_brand" class="form-control" name="input_style" placeholder="선호하는 브랜드" />
-                  </div>
-                  <div class="form-group">
-                    <label for="input_price">물품 예상 금액</label>
-                    <input type="text" id="input_price" class="form-control" name="input_price" placeholder="물품 예상 금액" />
-                  </div>
-                  <div class="form-group">
-                    <label for="input_info">기타 추가 정보</label>
-                  </div>
-                  <div class="form-group">
-                    <textarea id="input_info" class="form-control" name="input_info" placeholder="물품 목적, 본인이 가진 의류, 선호하는 질감 등"></textarea>
-                  </div>
-                  <div class="form-group">
-                    <input type="submit" value="Submit" id="tasks_post_submit" class="form-control" /> <input type="reset" value="Reset" class="form-control" />
-                  </div>
-                  <a class="nav-link js-scroll-trigger" href="#about">GO BACK</a>
-              </form>
+              <a class="btn btn-secondary btn-lg js-scroll-trigger" href="#applicationForm">온라인 양식 제출</a>
+              <button type="button" class="btn btn-secondary btn-lg" onclick="location.href='tel:01053285816'">전화 연결</button>
           </div>
         </div>
       </div>
@@ -121,6 +79,55 @@
     </div>
   </section>
 
+  <section id="applicationForm">
+    <div id="main_form_wrapper" style="display: block;">
+      <form role="form" action="#" method="POST" target="_self">
+          <div class="form-group">
+            <label for="input_name">이름</label>
+            <input type="text" id="input_name" class="form-control" name="input_name" placeholder="이름을 입력하세요" />
+          </div>
+          <div class="form-group">
+            <label for="input_place">장소</label>
+            <input type="text" id="input_place" class="form-control" name="input_place" placeholder="장소를 선택하세요(예시)" />
+          </div>
+          <div class="form-group">
+            <label for="input_date">날짜</label>
+            <input type="text" id="input_date" class="form-control" name="input_date" placeholder="날짜를 선택하세요" />
+          </div>
+          <div class="form-group">
+            <label for="input_with">함께하는 동행인 여부</label>
+            <input type="text" id="input_with" class="form-control" name="input_with" placeholder="함께하는 동행인 여부" />
+          </div>
+          <div class="form-group">
+            <label for="input_plan">계획 구매 품목</label>
+            <input type="text" id="input_plan" class="form-control" name="input_plan" placeholder="계획 구매 품목" />
+          </div>
+          <div class="form-group">
+            <label for="input_style">원하는 스타일</label>
+            <input type="text" id="input_style" class="form-control" name="input_style" placeholder="원하는 스타일" />
+          </div>
+          <div class="form-group">
+            <label for="input_brand">선호하는 브랜드</label>
+            <input type="text" id="input_brand" class="form-control" name="input_style" placeholder="선호하는 브랜드" />
+          </div>
+          <div class="form-group">
+            <label for="input_price">물품 예상 금액</label>
+            <input type="text" id="input_price" class="form-control" name="input_price" placeholder="물품 예상 금액" />
+          </div>
+          <div class="form-group">
+            <label for="input_info">기타 추가 정보</label>
+          </div>
+          <div class="form-group">
+            <textarea id="input_info" class="form-control" name="input_info" placeholder="물품 목적, 본인이 가진 의류, 선호하는 질감 등"></textarea>
+          </div>
+          <div class="form-group">
+            <input type="submit" value="Submit" id="tasks_post_submit" class="form-control" /> <input type="reset" value="Reset" class="form-control" />
+          </div>
+          <a class="nav-link js-scroll-trigger" href="#about">GO BACK</a>
+      </form>
+    </div>
+  </section>
+
   <section id="contact">
     <div class="container">
       <div class="row">
@@ -131,7 +138,7 @@
       </div>
     </div>
   </section>
-
+  
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
@@ -152,18 +159,18 @@
 
 </body>
 <script>
-  function formAction() {
-      console.log(this.getAttribute('id'));
-      if(this.getAttribute('id') === "main_menu_wrapper") {
-          $(this).hide();
-          $('#main_form_wrapper').show();
-      } else {
-          $(this).hide();
-          $('#main_menu_wrapper').show();
-      }
+  // function formAction() {
+  //     console.log(this.getAttribute('id'));
+  //     if(this.getAttribute('id') === "main_menu_wrapper") {
+  //         $(this).hide();
+  //         $('#main_form_wrapper').show();
+  //     } else {
+  //         $(this).hide();
+  //         $('#main_menu_wrapper').show();
+  //     }
 
-  }
-  document.getElementById('main_menu_wrapper').addEventListener('click', formAction);
-  document.getElementById('main_form_wrapper').addEventListener('click', formAction);
+  // }
+  // document.getElementById('main_menu_wrapper').addEventListener('click', formAction);
+  // document.getElementById('main_form_wrapper').addEventListener('click', formAction);
 </script>
 </html>
