--- a/test-frontend/index.html
+++ b/test-frontend/index.html
@@ -16,8 +16,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
-  <title>AB:LE(every)</title>
+  <title>ab:)e(every)</title>
+  
+  <!-- Favicon setting -->
+  <link rel="shortcut icon" href="./images/cl_ico.ico">
+  <link rel="icon" href="./images/cl_ico.ico">
 
   <!-- Bootstrap core CSS -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,21 +34,26 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">AB:LE (every)</a>
+    <div class="container" id="navContainer">
+      <a class="navbar-brand js-scroll-trigger" id="logImg" href="#page-top">
+        <img src="./images/CI_Landing-01.png" width="45%"/>
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">소개</a>
+            <a class="nav-link js-scroll-trigger" href="#about">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">서비스</a>
+            <a class="nav-link js-scroll-trigger" href="#review">REVIEW</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">연락</a>
+            <a class="nav-link js-scroll-trigger" href="#use">USE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">CONTACT US</a>
           </li>
         </ul>
       </div>
@@ -58,16 +66,31 @@
     <img src="./images/landingpage-02.jpg" width="100%"/>
   </section>
 
-  <section id="services">
+  <section id="review">
     <img src="./images/landingpage-03.jpg" width="100%"/>
+  </section>
+
+  <section id="use">
     <img src="./images/landingpage-04.jpg" width="100%"/>
   </section>
 
   <section id="contact">
     <img src="./images/landingpage-05.jpg" width="100%"/>
-    <a href="tel:01053285816" id="applyCall" class="btn btn-dark">전화하기</a>
-    <a href="https://forms.gle/LxkxTSsV6RPY9nnr6" id="applyCodi" class="btn btn-dark">코디신청하기</a>
+    <!-- <a href="tel:01053285816" id="applyCall" class="btn btn-dark btn-lg">전화하기</a> -->
+    <a href="mailto:able_every@daum.net" id="applyMail" class="btn btn-dark btn-lg">메일보내기</a>
+    <a href="https://forms.gle/LxkxTSsV6RPY9nnr6" id="applyCodi" class="btn btn-dark btn-lg" target= "_blank">코디신청하기</a>
+    <img src="./images/landingpage-06.jpg" width="100%"/>
+    <!-- <a href="tel:01053285816" id="applyCall" class="btn btn-purple btn-lg">전화하기</a> -->
+    <!-- <a href="https://forms.gle/LxkxTSsV6RPY9nnr6" id="applyCodi" class="btn btn-purple btn-lg">코디신청하기</a> -->
   </section>
+
+  <!-- Footer -->
+  <footer class="py-3 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; ab:)e[every]2019. All Rights Reserved.</p>
+    </div>
+    <!-- /.container -->
+  </footer>
 
   <!-- <section id="about">
     <div class="container">
@@ -94,7 +117,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section> 
   
   <section id="applicationForm">
     <div id="main_form_wrapper" style="display: none">
@@ -142,15 +165,7 @@
           </div>
       </form>
     </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; ab:le</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+  </section> -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="lib/jquery/jquery.min.js"></script>
