add codi and login pages plus set for backend

--- a/test-frontend/index.html
+++ b/test-frontend/index.html
@@ -11,8 +11,8 @@
     gtag('js', new Date());
     gtag('config', 'UA-154978198-1');
   </script>
-  <base href="http://www.ablevery.com/" target="_blank" />
-  <base href="http://ablevery.com/" target="_blank" />
+  <base href="http://www.ablevery.com/#" />
+  <base href="http://ablevery.com/#" />
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -38,57 +38,27 @@
 
   <!-- Bootstrap core CSS and JS -->
   <link href="./lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 
   <!-- Custom styles for this template -->
-  <link href="css/scrolling-nav.css" rel="stylesheet">
-  <link href="css/mainStyle.css" rel="stylesheet">
+  <link href="./css/scrolling-nav.css" rel="stylesheet">
+  <link href="./css/mainStyle.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <div class="container" id="navContainer">
-      <a class="navbar-brand js-scroll-trigger" id="logImg" href="#page-top">
-        <img src="./images/CI_Landing-01.png" width="40%"/>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">ABOUT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#review">REVIEW</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#use">USE</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">CONTACT US</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div id="importHeader"></div>
 
   <img src="./images/landingpage-01.jpg" alt="welcome to able(every)" width="100%"/>
-
   <section id="about">
     <img src="./images/landingpage-02.jpg" alt="시각장애인과 함께하는 오프라인 쇼핑, 모든 시각장애인이 원하는 옷을 직접 구입할 수 있는 에브리 36.5" width="100%"/>
   </section>
-
   <section id="review">
     <img src="./images/landingpage-03.jpg" alt="사용자 리뷰" width="100%"/>
   </section>
-
   <section id="use">
     <img src="./images/landingpage-04.jpg" alt="서비스 진행방식, 이용문의, 정보수집 및 전달, 코디매칭, 서비스 이용" width="100%"/>
   </section>
-
   <section id="contact">
     <img src="./images/landingpage-05.jpg" alt="연락은 able_every@daum.net 으로 주세요" width="100%"/>
     <!-- <a href="tel:01053285816" id="applyCall" class="btn btn-dark btn-lg">전화하기</a> -->
@@ -99,13 +69,7 @@
     <!-- <a href="https://forms.gle/LxkxTSsV6RPY9nnr6" id="applyCodi" class="btn btn-purple btn-lg">코디신청하기</a> -->
   </section>
 
-  <!-- Footer -->
-  <footer class="py-3 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; ab:)e[every]2019. All Rights Reserved.</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+  <div id="importFooter"></div>
 
   <!-- <section id="about">
     <div class="container">
@@ -182,29 +146,17 @@
     </div>
   </section> -->
 
+  <script>
+    $("#importHeader").load("components/navBar.html");
+    $("#importFooter").load("components/footer.html");   
+  </script>
   <!-- Bootstrap core JavaScript -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="lib/jquery-easing/jquery.easing.min.js"></script>
+  <script src="./lib/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom JavaScript for this theme -->
-  <script src="js/scrolling-nav.js"></script>
+  <script src="./js/scrolling-nav.js"></script>
 </body>
-<script>
-  // function formAction() {
-  //     console.log(this.getAttribute('id'));
-  //     if(this.getAttribute('id') === "main_menu_wrapper") {
-  //         $(this).hide();
-  //         $('#main_form_wrapper').show();
-  //     } else {
-  //         $(this).hide();
-  //         $('#main_menu_wrapper').show();
-  //     }
-
-  // }
-  // document.getElementById('main_menu_wrapper').addEventListener('click', formAction);
-  // document.getElementById('main_form_wrapper').addEventListener('click', formAction);
-</script>
 </html>
