--- a/test-frontend/codi.html
+++ b/test-frontend/codi.html
@@ -7,12 +7,12 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154978198-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() {dataLayer.push(arguments);}
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'UA-154978198-1');
   </script>
-  <base href="http://www.ablevery.com/codi" target="_blank" />
-  <base href="http://ablevery.com/codi" target="_blank" />
+  <base href="http://www.ablevery.com/#" />
+  <base href="http://ablevery.com/#" />
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -38,62 +38,129 @@
 
   <!-- Bootstrap core CSS and JS -->
   <link href="./lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 
   <!-- Custom styles for this template -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-  <link href="css/codiStyle.css" rel="stylesheet">
-  <script src="lib/jquery/jquery.min.js"></script>
+  <link href="./css/mainStyle.css" rel="stylesheet">
+  <style>
+    #importHeader {
+      margin-bottom: 60px;
+    }
+  </style>
 </head>
-<body>
-  <div class="container h-100">
-    <div class="d-flex justify-content-center h-100">
-      <div class="user_card">
-        <div class="d-flex justify-content-center">
-          <div class="brand_logo_container">
-            <img src="./images/cl_ico.ico"
-              class="brand_logo" alt="Logo">
-          </div>
-        </div>
 
-        <div class="d-flex justify-content-center form_container">
-          <form>
-            <div class="input-group mb-3">
-              <div class="input-group-append">
-                <span class="input-group-text"><i class="fas fa-user"></i></span>
-              </div>
-              <input type="text" name="" class="form-control input_user" value="" placeholder="username">
-            </div>
-            <div class="input-group mb-2">
-              <div class="input-group-append">
-                <span class="input-group-text"><i class="fas fa-key"></i></span>
-              </div>
-              <input type="password" name="" class="form-control input_pass" value="" placeholder="password">
-            </div>
-            <div class="form-group">
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="customControlInline">
-                <label class="custom-control-label" for="customControlInline">Remember me</label>
-              </div>
-            </div>
-            <div class="d-flex justify-content-center mt-3 login_container">
-              <button type="button" name="button" class="btn login_btn">Login</button>
-            </div>
-          </form>
-        </div><!-- Form tag DIV tag -->
-        <div class="mt-4">
-          <div class="d-flex justify-content-center links">
-            Don't have an account? <a href="#" class="ml-2">Sign Up</a>
-          </div>
-          <div class="d-flex justify-content-center links">
-            <a href="#">Forgot your password?</a>
-          </div>
-        </div>
+<body id="page-top">
+  <div id="importHeader"></div>
 
-      </div><!-- user_card tag DIV tag -->
+  <div class="list-group">
+    <div class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target="#exampleModalCenter">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">List group item heading</h5>
+        <small>3 days ago</small>
+      </div>
+      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      <small>Donec id elit non mi porta.</small>
     </div>
-  </div><!-- total container tag DIV tag -->
-</body>
+    <div class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target="#exampleModalCenter">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">List group item heading</h5>
+        <small>3 days ago</small>
+      </div>
+      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      <small>Donec id elit non mi porta.</small>
+    </div>
+    <div class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target="#exampleModalCenter">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">List group item heading</h5>
+        <small>3 days ago</small>
+      </div>
+      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      <small>Donec id elit non mi porta.</small>
+    </div>
+    <div class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target="#exampleModalCenter">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">List group item heading</h5>
+        <small>3 days ago</small>
+      </div>
+      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      <small>Donec id elit non mi porta.</small>
+    </div>
+    <div class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target="#exampleModalCenter">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">List group item heading</h5>
+        <small>3 days ago</small>
+      </div>
+      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      <small>Donec id elit non mi porta.</small>
+    </div>
+    <div class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target="#exampleModalCenter">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">List group item heading</h5>
+        <small>3 days ago</small>
+      </div>
+      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      <small>Donec id elit non mi porta.</small>
+    </div>
+    <div class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target="#exampleModalCenter">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">List group item heading</h5>
+        <small>3 days ago</small>
+      </div>
+      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      <small>Donec id elit non mi porta.</small>
+    </div>
+  </div>
 
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="importFooter"></div>
+
+  <script>
+    $("#importHeader").load("components/navBar.html");
+    $("#importFooter").load("components/footer.html");   
+  </script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="./lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="./lib/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom JavaScript for this theme -->
+  <script src="./js/scrolling-nav.js"></script>
+</body>
+<script>
+  $(document).ready(function(){
+    $('#navbarMenuItems').children().remove();
+    let menuArr = 
+    [
+      '<li class="nav-item"><a class="nav-link" href="#">HOME</a></li>',
+      '<li class="nav-item"><a class="nav-link" href="#">MY PAGE</a></li>',
+      '<li class="nav-item"><a class="nav-link" href="#">LOG OUT</a></li>'
+    ]
+    
+    for (let index = 0; index < menuArr.length; index++) {
+      $('#navbarMenuItems').append(menuArr[index]);
+    }
+  });
+</script>
 </html>
