--- a/test-frontend/login.html
+++ b/test-frontend/login.html
@@ -22,19 +22,19 @@
   <!-- meta tag for face book link share -->
   <meta property="og:title" content="ab:le(every)">
   <meta property="og:description" content="코디네이터와 시각장애인이 함께하는 오프라인 쇼핑, ab:le(every)">
-  <meta property="og:image" content="./images/landingpage-01.jpg">
+  <meta property="og:image" content="./public/images/landingpage-01.jpg">
   <meta property="og:image:type" content="image/jpg">
 
   <!-- Google / Search Engine Tags / 구글 검색 엔진 -->
   <meta itemprop="name" content="ab:le(에브리)">
   <meta itemprop="description" content="코디네이터와 시각장애인이 함께하는 오프라인 쇼핑, ab:le(every)">
-  <meta itemprop="image" content="./images/landingpage-01.jpg">
+  <meta itemprop="image" content="./public/images/landingpage-01.jpg">
 
   <title>ablevery</title>
 
   <!-- Favicon setting -->
-  <link rel="shortcut icon" href="./images/cl_ico.ico">
-  <link rel="icon" href="./images/cl_ico.ico">
+  <link rel="shortcut icon" href="./public/images/cl_ico.ico">
+  <link rel="icon" href="./public/images/cl_ico.ico">
 
   <!-- Bootstrap core CSS and JS -->
   <link href="./lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
   <!-- Custom styles for this template -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
     integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-  <link href="./css/loginStyle.css" rel="stylesheet">
+  <link href="./public/css/loginStyle.css" rel="stylesheet">
 </head>
 <body>
   <div class="container h-100">
