--- a/test-frontend/login.html
+++ b/test-frontend/login.html
@@ -11,9 +11,6 @@
     gtag('js', new Date());
     gtag('config', 'UA-154978198-1');
   </script>
-  <base href="http://www.ablevery.com/codi" />
-  <base href="http://ablevery.com/codi" />
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="코디네이터와 시각장애인이 함께하는 오프라인 쇼핑, ab:le(every)">
@@ -52,7 +49,7 @@
       <div class="user_card">
         <div class="d-flex justify-content-center">
           <div class="brand_logo_container">
-            <img src="./images/cl_ico.ico"
+            <img src="./public/images/cl_ico.ico"
               class="brand_logo" alt="Logo">
           </div>
         </div>
@@ -78,7 +75,8 @@
               </div>
             </div>
             <div class="d-flex justify-content-center mt-3 login_container">
-              <button type="button" name="button" class="btn login_btn">Login</button>
+              <!-- <button type="button" name="button" class="btn login_btn">Login</button> -->
+              <a href="/codi" class="btn login_btn">Login</a>
             </div>
           </form>
         </div><!-- Form tag DIV tag -->
